force-app/main/default/objects/Engagement_Comment__c/Engagement_Comment__c.object-meta.xml
<CustomObject>
    <label>Engagement Comment</label>
    <nameField>
        <displayFormat>ENOP-{0000}</displayFormat>
        <label>Engagement Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Comments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>