force-app/main/default/objects/Engagement_Comment__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Engagement_Comments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>