force-app/main/default/objects/Engagement_Comment__c/fields/Include_On_Report__c.field-meta.xml
<CustomField>
    <fullName>Include_On_Report__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include On Report</label>
    <type>Checkbox</type>
</CustomField>