force-app/main/default/objects/Engagement_Comment__c/fields/Include_On_Report_Formula__c.field-meta.xml
<CustomField>
    <fullName>Include_On_Report_Formula__c</fullName>
    <formula>IF( Include_On_Report__c, &apos;Y&apos;,&apos;N&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include On Report Formula</label>
    <type>Text</type>
</CustomField>