force-app/main/default/objects/Engagement_Comment__c/fields/Opp_Comment_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Opp_Comment_Create_Date__c</fullName>
    <label>Opp Comment Create Date</label>
    <type>Date</type>
</CustomField>