force-app/main/default/objects/Engagement_Comment__c/fields/Opp_Comment_Creator__c.field-meta.xml
<CustomField>
    <fullName>Opp_Comment_Creator__c</fullName>
    <label>Opp Comment Creator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>