force-app/main/default/objects/Engagement_Comment__c/fields/touch__c.field-meta.xml
<CustomField>
    <fullName>touch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>touch</label>
    <type>Checkbox</type>
</CustomField>