force-app/main/default/objects/Engagement_Comment__c/validationRules/Compliance_Users_Only_Eng.validationRule-meta.xml
<ValidationRule>
    <fullName>Compliance_Users_Only_Eng</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Comment_Type__c, &apos;Compliance&apos;) &amp;&amp;
 $User.ProfileId != &apos;00ei0000001XP7O&apos; &amp;&amp;
 $User.ProfileId != &apos;00ei00000016T4B&apos;</errorConditionFormula>
    <errorDisplayField>Comment_Type__c</errorDisplayField>
    <errorMessage>Only Compliance users can create comments of type Compliance.</errorMessage>
</ValidationRule>