force-app/main/default/objects/Engagement_Comment__c/validationRules/Engagement_Comments_Not_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Engagement_Comments_Not_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Comment__c ) || ISNULL( Comment__c )</errorConditionFormula>
    <errorMessage>Cannot save empty engagement comments.</errorMessage>
</ValidationRule>